2005-11-09  Kevin P. Fleming  <kpfleming@digium.com>

	* channels/chan_iax2.c (update_registry): don't complain about unspecifed registration expiration intervals, just use the minimum

2005-11-08  Kevin P. Fleming  <kpfleming@digium.com>

	* Asterisk 1.2.0-rc1 released.

	* include/asterisk/file.h: add test to ensure that stdio.h is included before this file (issue #5658)

	* res/res_odbc.c (odbc_prepare_and_execute): add new API call for use to properly handle prepared statements across server disconnects (issue #5563)

	* pbx.c (pbx_substitute_variables_helper_full): use already-substituted buffer for parsing variable name (issue #5664)

	* channels/chan_zap.c (zt_request): return AST_CAUSE_CONGESTION when a group-channel is requested and the group exists but all channels are busy (issue #3360, related fix)
	* channels/chan_iax2.c (create_addr): treat UNREACHABLE as AST_CAUSE_UNREGISTERED so that it will generate CHANUNAVAIL from app_dial (issue #3360)

	* res/res_features.c (ast_bridge_call_thread_launch): set SCHED_RR separately from thread creation, so it won't fail when running as non-root (issue #5601, different fix)

	* pbx.c (pbx_builtin_pushvar_helper): add new API function for setting variables that can exist multiple times (issue #2720)
	* apps/Makefile (APPS): add app_stack (issue #2720)
	* apps/app_stack.c: new applications (issue #2720)

	* apps/app_meetme.c: fix two audio delay problems related to using non-Zap channels in conferences (issues #3599 and #4252)
	* configs/meetme.conf.sample: add documentation of new 'audiobuffers' setting to control buffering on incoming audio from non-Zap channels

	* channels/chan_local.c (local_call): move channel variables from incoming to outgoing instead of inheriting them (issue #5604)

	* many files: add explicit include of stdio.h (issue #5650)

2005-11-07  Kevin P. Fleming  <kpfleming@digium.com>

	* UPGRADE.txt (Parking): add note about new parking behavior (issue #5532)
